@@ -22,11 +22,17 @@ Package org.springframework.osgi.test
 Changes in version 1.0.2 (2008-03-xx)
 -------------------------------------
 
+General
+* adjusted the manifests so no internal packages are exposed and the versions both spring and spring-osgi are present
+
 Package org.springframework.osgi.context
 * AbstractOsgiBundleApplicationContext registers the application context as an OSGi service using just the interfaces
 
+Package org.springframework.osgi.extender
+* raised service dependency waiting logging level to INFO (from DEBUG)
+
 Package org.springframework.osgi.util
-* BundleDelegatingClassLoader relies on default hashCode/equals methods to prevent caching proxies on bundle updates
+* BundleDelegatingClassLoader relies on default hashCode/equals methods to prevent class caching on bundle updates
 
 Package org.springframework.osgi.test
 * Instalation bundles have the location set to the backing resource URL if possible, falling back to the description
